# boatswain

./: .gitlab-ci.yml  README.md  TODO.md  boatswain.doap  com.feaneron.Boatswain.json  meson.build
build-aux/: com.feaneron.Boatswain.Devel.json  com.feaneron.Boatswain.json
data/: com.feaneron.Boatswain.appdata.xml.in  com.feaneron.Boatswain.appdata.xml.in.in  com.feaneron.Boatswain.desktop.in  com.feaneron.Boatswain.desktop.in.in  com.feaneron.Boatswain.gschema.xml  com.feaneron.Boatswain.metainfo.xml.in.in  meson.build
data/icons/: meson.build
doc/: class-diagram.md  stream-deck.md
po/: LINGUAS  POTFILES  POTFILES.in  bg.po  boatswain.pot  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  ka.po  meson.build  nb.po  nl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
src/: .goutputstream-7MKDK1  boatswain.gresource.xml  bs-action-factory.c  bs-action-factory.h  bs-action-info.c  bs-action-info.h  bs-action-private.h  bs-action.c  bs-action.h  bs-application-private.h  bs-application.c  bs-application.h  bs-button-editor.c  bs-button-editor.h  bs-button-editor.ui  bs-button-grid-region.c  bs-button-grid-region.h  bs-button-grid-widget.c  bs-button-grid-widget.h  bs-button-grid-widget.ui  bs-button-private.h  bs-button-widget.c  bs-button-widget.h  bs-button-widget.ui  bs-button.c  bs-button.h  bs-debug.h.in  bs-desktop-controller-private.h  bs-desktop-controller.c  bs-desktop-controller.h  bs-device-editor.c  bs-device-editor.h  bs-device-editor.ui  bs-device-enums.h  bs-device-manager.c  bs-device-manager.h  bs-device-region.c  bs-device-region.h  bs-dial-grid-region.c  bs-dial-grid-region.h  (+73 more)
src/plugins/: meson.build
src/plugins/default/: default-action-factory.c  default-action-factory.h  default-brightness-action.c  default-brightness-action.h  default-multi-action-editor.c  default-multi-action-editor.h  default-multi-action-editor.ui  default-multi-action-private.h  default-multi-action-row.c  default-multi-action-row.h  default-multi-action-row.ui  default-multi-action.c  default-multi-action.h  default-plugin.c  default-switch-page-action.c  default-switch-page-action.h  default-switch-profile-action.c  default-switch-profile-action.h  default.gresource.xml  default.plugin.desktop.in  meson.build
src/plugins/desktop/: desktop-action-factory.c  desktop-action-factory.h  desktop-keyboard-shortcut-action.c  desktop-keyboard-shortcut-action.h  desktop-plugin.c  desktop-shortcut-dialog.c  desktop-shortcut-dialog.h  desktop-shortcut-dialog.ui  desktop.gresource.xml  desktop.plugin.desktop.in  meson.build
src/plugins/dummy/: dummy-action-1.c  dummy-action-1.h  dummy-action-factory.c  dummy-action-factory.h  dummy-plugin.c  dummy.gresource.xml  dummy.plugin  meson.build
src/plugins/gaming/: gaming.gresource.xml  gaming.js  gaming.plugin.desktop.in  meson.build  score.js
src/plugins/gjs-base/: gjs-base.gresource.xml  gjs-base.js  gjs-base.plugin  meson.build
src/plugins/launcher/: launcher-action-factory.c  launcher-action-factory.h  launcher-launch-action.c  launcher-launch-action.h  launcher-launch-preferences.c  launcher-launch-preferences.h  launcher-launch-preferences.ui  launcher-open-file-action.c  launcher-open-file-action.h  launcher-open-url-action.c  launcher-open-url-action.h  launcher-plugin.c  launcher.gresource.xml  launcher.plugin  launcher.plugin.desktop.in  meson.build
src/plugins/network/: meson.build  network-action-factory.c  network-action-factory.h  network-http-action-prefs.c  network-http-action-prefs.h  network-http-action-prefs.ui  network-http-action.c  network-http-action.h  network-plugin.c  network.gresource.xml  network.plugin.desktop.in
src/plugins/network/icons/: README.md
src/plugins/obs-studio/: meson.build  obs-action-factory.c  obs-action-factory.h  obs-action.c  obs-action.h  obs-connection-manager.c  obs-connection-manager.h  obs-connection-settings.c  obs-connection-settings.h  obs-connection-settings.ui  obs-connection.c  obs-connection.h  obs-record-action.c  obs-record-action.h  obs-scene.c  obs-scene.h  obs-source.c  obs-source.h  obs-stream-action.c  obs-stream-action.h  obs-studio-plugin.c  obs-studio.gresource.xml  obs-studio.plugin.in  obs-switch-scene-action.c  obs-switch-scene-action.h  obs-toggle-source-action.c  obs-toggle-source-action.h  obs-types.h  obs-utils.c  obs-utils.h  obs-virtualcam-action.c  obs-virtualcam-action.h
src/plugins/soundboard/: meson.build  mpris-controller.c  mpris-controller.h  soundboard-action-factory.c  soundboard-action-factory.h  soundboard-mpris-action.c  soundboard-mpris-action.h  soundboard-play-action-prefs.c  soundboard-play-action-prefs.h  soundboard-play-action-prefs.ui  soundboard-play-action.c  soundboard-play-action.h  soundboard-plugin.c  soundboard.gresource.xml  soundboard.plugin.desktop.in  soundboard.plugin.in
